gitops/apps/lidarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
        app.kubernetes.io/name: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          ports:
            - containerPort: 8686
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-root
              mountPath: /srv/media
            - name: media
              mountPath: /music
              subPath: library/music
            - name: media
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: media-root
          hostPath:
            path: /srv/media
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
