gitops/apps/lidarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: 8686
      protocol: TCP
