gitops/apps/lidarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Lidarr
    gethomepage.dev/icon: lidarr.png
    gethomepage.dev/description: Music manager
    gethomepage.dev/href: "http://lidarr.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
